--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="./style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <title>さくちゃんクイズ</title>
+    <title>クイズ</title>
 </head>
 
 <body>
-    <div class="heading">さくちゃんクイズ</div>
+    <div class="heading">クイズ</div>
     <div class="quiz-out-frame">
     </div>
     <script src="./ app.js"></script>
