--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="quiz-out-frame">
     </div>
     <script src="./ app.js"></script>
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 
 </html>
