--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <meta property="og:title" content="Result | The Quiz">
    <meta property="og:description" content="さあクイズをしよう">
    <meta property="og:site_name" content="The Quiz">
-   <meta property="og:image" content="https://jpig-com.github.io/quiz-test/img/thumbnail.jpg/">
+   <meta property="og:image" content="./img/thumbnail.jpg">
     <link rel="stylesheet" href="./style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
