--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- OGP -->
    <meta property="og:url" content="https://v97ug.github.io/prog-school-cooking-site/">
    <meta property="og:type" content="website">
-   <meta property="og:title" content="Result | The Quiz">
+   <meta property="og:title" content="The Quiz">
    <meta property="og:description" content="さあクイズをしよう">
    <meta property="og:site_name" content="The Quiz">
    <meta property="og:image" content="./img/thumbnail.jpg">
