--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- OGP -->
-   <meta property="og:url" content="https://v97ug.github.io/prog-school-cooking-site/">
-   <meta property="og:type" content="website">
-   <meta property="og:title" content="The Quiz">
-   <meta property="og:description" content="さあクイズをしよう">
-   <meta property="og:site_name" content="The Quiz">
-   <meta property="og:image" content="./img/thumbnail.jpg">
+    <meta property="og:url" content="https://v97ug.github.io/prog-school-cooking-site/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="The Quiz">
+    <meta property="og:description" content="さあクイズをしよう">
+    <meta property="og:site_name" content="The Quiz">
+    <meta property="og:image" content="https://jpig-com.github.io/quiz-test/img/thumbnail.jpg">
     <link rel="stylesheet" href="./style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
